# wdlm

./: README.md  pyproject.toml
configs/: toy_baseline.yaml  toy_para_align_baseline.yaml  toy_state_head_baseline.yaml  toy_wdlm.yaml  toy_wdlm_no_conditioning.yaml  toy_wdlm_no_contrastive.yaml  toy_wdlm_no_para.yaml  toy_wdlm_no_state.yaml  toy_wdlm_state128.yaml  toy_wdlm_state512.yaml
data/toy_world/splits/: test_compositional_ood.jsonl  test_iid.jsonl  (+1 more)
docs/: first_result_memo.md
runs/toy_baseline/: checkpoint_best.pt  checkpoint_last.pt  config_snapshot.yaml  experiment_report.json  metrics.json  train_log.jsonl
runs/toy_para_align_baseline/: checkpoint_best.pt  checkpoint_last.pt  config_snapshot.yaml  experiment_report.json  metrics.json  state_tensorizer.json  train_log.jsonl
runs/toy_state_head_baseline/: checkpoint_best.pt  checkpoint_last.pt  config_snapshot.yaml  experiment_report.json  metrics.json  tokenizer.json  train_log.jsonl
runs/toy_wdlm/: config_snapshot.yaml  experiment_report.json  metrics.json  tokenizer.json  train_log.jsonl
scripts/: smoke_deliverable_b.py
src/wdlm/: __init__.py  cli.py  schemas.py
tests/: conftest.py  test_ablation_suite.py  test_actions.py  test_analysis.py  test_baseline_variants.py  test_cli_contract.py  test_comparison.py  test_dataset_loading.py  test_device_resolution.py  test_eval_suite.py  test_exact_state.py  test_generate.py  test_losses.py  test_ood.py  test_queries.py  test_renderer.py  test_reproducibility.py  test_smoke_script.py  test_trajectory.py  test_validate_dataset.py  test_wdlm_shapes.py
(+48 files in other folders)
